--- a/.jshintrc
+++ b/.jshintrc
@@ -18,11 +18,13 @@
     "trailing": true,
     "smarttabs": true,
     "jquery": true,
+    "expr": true,
     "globals": {
         "Backbone": false,
         "App": false,
         "expect": false,
         "describe": false,
+        "before": false,
         "it": false,
         "_": false
     }
