--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "reversi",
-  "version": "0.0.0",
+  "name": "reversi-with-backbone",
+  "description": "Reversi game built with Backbone javascript framework",
+  "version": "1.1.1",
+  "homepage": "https://github.com/tan-yuki/reversi",
   "dependencies": {
     "gzippo": "~0.2.0",
     "express": "~3.4.8"
@@ -29,7 +31,8 @@
     "grunt-concurrent": "~0.4.0",
     "load-grunt-tasks": "~0.2.0",
     "time-grunt": "~0.2.0",
-    "jshint-stylish": "~0.1.3"
+    "jshint-stylish": "~0.1.3",
+    "grunt-contrib-yuidoc": "~0.5.0"
   },
   "engines": {
     "node": ">=0.8.0"
